--- a/autoscaler/skaffold.yaml
+++ b/autoscaler/skaffold.yaml
@@ -2,7 +2,7 @@ apiVersion: skaffold/v1alpha2
 kind: Config
 build:
   artifacts:
-  - imageName: gcr.io/k8s-skaffold/skaffold-example
+  - imageName: gcr.io/$GOOGLE_CLOUD_PROJECT/$IMAGE_TAG
 deploy:
   kubectl:
     manifests:
